After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 733526 - rhythmbox / audioscrobbler fails if built from separate build dir
rhythmbox / audioscrobbler fails if built from separate build dir
Status: RESOLVED FIXED
Product: rhythmbox
Classification: Other
Component: Plugins (other)
HEAD
Other Linux
: Normal normal
: ---
Assigned To: RhythmBox Maintainers
RhythmBox Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-07-21 23:53 UTC by gnome.vrb
Modified: 2014-08-03 06:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix: Add missing build lib dir to include path (534 bytes, patch)
2014-07-21 23:55 UTC, gnome.vrb
none Details | Review

Description gnome.vrb 2014-07-21 23:53:38 UTC
sid@unstable:~/build/git-build/rhythmbox/plugins/audioscrobbler$ make
/usr/bin/intltool-merge /home/sid/source/git/rhythmbox/po /home/sid/source/git/rhythmbox/plugins/audioscrobbler/audioscrobbler.plugin.in audioscrobbler.plugin -d -u -c ../../po/.intltool-merge-cache
Generating and caching the translation database
Merging translations into audioscrobbler.plugin.
make  all-am
make[1]: Entering directory '/local/packages/build/git-build/rhythmbox/plugins/audioscrobbler'
  CC       libaudioscrobbler_la-rb-audioscrobbler-plugin.lo
  CC       libaudioscrobbler_la-rb-audioscrobbler-entry.lo
  CC       libaudioscrobbler_la-rb-audioscrobbler-profile-page.lo
  CC       libaudioscrobbler_la-rb-audioscrobbler-account.lo
  CC       libaudioscrobbler_la-rb-audioscrobbler-service.lo
  CC       libaudioscrobbler_la-rb-audioscrobbler-user.lo
  CC       libaudioscrobbler_la-rb-audioscrobbler.lo
/home/sid/source/git/rhythmbox/plugins/audioscrobbler/rb-audioscrobbler.c:57:24: fatal error: rb-marshal.h: No such file or directory
 #include "rb-marshal.h"
                        ^
compilation terminated.
Makefile:703: recipe for target 'libaudioscrobbler_la-rb-audioscrobbler.lo' failed
make[1]: *** [libaudioscrobbler_la-rb-audioscrobbler.lo] Error 1
make[1]: Leaving directory '/local/packages/build/git-build/rhythmbox/plugins/audioscrobbler'
Makefile:549: recipe for target 'all' failed
make: *** [all] Error 2
Comment 1 gnome.vrb 2014-07-21 23:55:08 UTC
Created attachment 281354 [details] [review]
Fix: Add missing build lib dir to include path

diff -r 9e660529ac85 rhythmbox/plugins/audioscrobbler/Makefile.am
--- a/rhythmbox/plugins/audioscrobbler/Makefile.am	Tue Jul 22 05:14:05 2014 +0530
+++ b/rhythmbox/plugins/audioscrobbler/Makefile.am	Tue Jul 22 05:15:21 2014 +0530
@@ -47,6 +47,7 @@
 	-I$(top_srcdir)/podcast                    	\
 	-I$(top_srcdir)/plugins				\
 	-I$(top_srcdir)/shell				\
+	-I$(top_builddir)/lib                        	\
 	-DPIXMAP_DIR=\""$(datadir)/pixmaps"\"		\
 	-DSHARE_DIR=\"$(pkgdatadir)\"                   \
 	-DDATADIR=\""$(datadir)"\"			\
Comment 2 Jonathan Matthew 2014-08-03 06:57:04 UTC
fixed in commit dc6edc1, but not the way you suggested.  In general there's no need to use custom marshallers, so we don't need rb-marshal.h in most places.