audioscrobbler: don't use a custom marshaller

https://bugzilla.gnome.org/show_bug.cgi?id=733526